--- a/cart.ui
+++ b/cart.ui
@@ -47,7 +47,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="2" column="3">
+     <item row="3" column="3">
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0" colspan="2" alignment="Qt::AlignHCenter">
         <widget class="QLabel" name="partName">
@@ -236,7 +236,7 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="3" column="2">
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -249,7 +249,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="2" column="1">
+     <item row="3" column="1">
       <widget class="QListView" name="listView">
        <property name="minimumSize">
         <size>
@@ -262,6 +262,16 @@ QWidget {background-color: white}
        </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" alignment="Qt::AlignHCenter">
+      <widget class="QLabel" name="label_6">
+       <property name="styleSheet">
+        <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
+       </property>
+       <property name="text">
+        <string>Item</string>
        </property>
       </widget>
      </item>
