--- a/inventory.ui
+++ b/inventory.ui
@@ -35,7 +35,7 @@ QWidget {background-color: white}
     </item>
     <item row="0" column="1">
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="2" column="3">
+      <item row="3" column="3">
        <layout class="QGridLayout" name="gridLayout">
         <property name="leftMargin">
          <number>0</number>
@@ -227,7 +227,17 @@ QWidget {background-color: white}
         </item>
        </layout>
       </item>
-      <item row="2" column="0">
+      <item row="2" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_6">
+        <property name="styleSheet">
+         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Category</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
        <widget class="QListView" name="categoryView">
         <property name="minimumSize">
          <size>
@@ -253,7 +263,7 @@ QWidget {background-color: white}
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QListView" name="itemListView">
         <property name="minimumSize">
          <size>
@@ -288,7 +298,17 @@ QWidget {background-color: white}
         </property>
        </spacer>
       </item>
-      <item row="2" column="2">
+      <item row="2" column="1" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_7">
+        <property name="styleSheet">
+         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Item</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
