--- a/about.ui
+++ b/about.ui
@@ -96,32 +96,15 @@ QWidget {background-color: white}
      <item row="3" column="1" colspan="2">
       <widget class="QLabel" name="label_5">
        <property name="styleSheet">
-        <string notr="true">font: 18pt &quot;Noto Sans&quot;;</string>
+        <string notr="true">font: italic bold 18pt &quot;Noto Sans&quot;;</string>
        </property>
        <property name="text">
         <string>v0.1a</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
-      <widget class="QPushButton" name="closeButton">
-       <property name="text">
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" colspan="2">
-      <widget class="QLabel" name="label_2">
-       <property name="styleSheet">
-        <string notr="true">font: 75 18pt &quot;Noto Sans&quot;;</string>
-       </property>
-       <property name="text">
-        <string>Smart Inventory Management System</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0" colspan="3">
-      <spacer name="verticalSpacer_3">
+     <item row="9" column="1">
+      <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -133,8 +116,25 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="9" column="1">
-      <spacer name="verticalSpacer">
+     <item row="8" column="1">
+      <widget class="QPushButton" name="closeButton">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" colspan="2">
+      <widget class="QLabel" name="label_2">
+       <property name="styleSheet">
+        <string notr="true">font: bold 18pt &quot;Noto Sans&quot;;</string>
+       </property>
+       <property name="text">
+        <string>Smart Inventory Management System</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0" colspan="3">
+      <spacer name="verticalSpacer_3">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
