--- a/requestitem.ui
+++ b/requestitem.ui
@@ -19,15 +19,57 @@ QWidget {background-color: rgb(255, 255, 255)}
 </string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
+   <item row="0" column="0">
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="2">
+    <spacer name="horizontalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="1">
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="2" column="3">
-        <widget class="QLineEdit" name="price"/>
+       <item row="3" column="1" colspan="3">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item row="0" column="3">
         <widget class="QLineEdit" name="project"/>
+       </item>
+       <item row="1" column="3">
+        <widget class="QLineEdit" name="item"/>
+       </item>
+       <item row="2" column="3">
+        <widget class="QLineEdit" name="price"/>
        </item>
        <item row="2" column="1">
         <widget class="QLabel" name="label_7">
@@ -35,9 +77,6 @@ QWidget {background-color: rgb(255, 255, 255)}
           <string>Price</string>
          </property>
         </widget>
-       </item>
-       <item row="1" column="3">
-        <widget class="QLineEdit" name="item"/>
        </item>
        <item row="0" column="1">
         <widget class="QLabel" name="label_5">
@@ -53,26 +92,6 @@ QWidget {background-color: rgb(255, 255, 255)}
          </property>
         </widget>
        </item>
-       <item row="3" column="0" colspan="5">
-        <spacer name="verticalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="4" column="0" colspan="5">
-        <widget class="QPushButton" name="requestItemButton">
-         <property name="text">
-          <string>Request Item</string>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="2">
         <spacer name="horizontalSpacer">
          <property name="orientation">
@@ -85,6 +104,13 @@ QWidget {background-color: rgb(255, 255, 255)}
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="4" column="1" colspan="3" alignment="Qt::AlignHCenter">
+        <widget class="QDialogButtonBox" name="buttonBox">
+         <property name="standardButtons">
+          <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
@@ -127,32 +153,6 @@ QWidget {background-color: rgb(255, 255, 255)}
       </spacer>
      </item>
     </layout>
-   </item>
-   <item row="0" column="0">
-    <spacer name="horizontalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="2">
-    <spacer name="horizontalSpacer_4">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="1" column="1">
     <spacer name="verticalSpacer_2">
