--- a/requestitem.ui
+++ b/requestitem.ui
@@ -19,6 +19,13 @@ QWidget {background-color: rgb(255, 255, 255)}
 </string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
+   <item row="2" column="1" alignment="Qt::AlignHCenter">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <spacer name="horizontalSpacer_3">
      <property name="orientation">
@@ -49,19 +56,6 @@ QWidget {background-color: rgb(255, 255, 255)}
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="1">
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="3" column="1" colspan="3">
-        <spacer name="verticalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="0" column="3">
         <widget class="QLineEdit" name="project"/>
        </item>
@@ -105,13 +99,6 @@ QWidget {background-color: rgb(255, 255, 255)}
          </property>
         </spacer>
        </item>
-       <item row="4" column="1" colspan="3" alignment="Qt::AlignHCenter">
-        <widget class="QDialogButtonBox" name="buttonBox">
-         <property name="standardButtons">
-          <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-         </property>
-        </widget>
-       </item>
       </layout>
      </item>
      <item row="0" column="0" colspan="3" alignment="Qt::AlignHCenter">
@@ -154,8 +141,21 @@ QWidget {background-color: rgb(255, 255, 255)}
      </item>
     </layout>
    </item>
-   <item row="1" column="1">
+   <item row="3" column="1">
     <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1">
+    <spacer name="verticalSpacer_3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
@@ -171,6 +171,8 @@ QWidget {background-color: rgb(255, 255, 255)}
   <zorder>horizontalSpacer_3</zorder>
   <zorder>horizontalSpacer_4</zorder>
   <zorder>verticalSpacer_2</zorder>
+  <zorder>buttonBox</zorder>
+  <zorder>verticalSpacer_3</zorder>
  </widget>
  <resources/>
  <connections/>
