--- a/enrol.ui
+++ b/enrol.ui
@@ -65,19 +65,6 @@ QWidget {background-color: white}
        <item row="1" column="1">
         <widget class="QLineEdit" name="lineEdit"/>
        </item>
-       <item row="6" column="0" colspan="2">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="7" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
@@ -143,6 +130,22 @@ QWidget {background-color: white}
         <widget class="QLabel" name="label">
          <property name="text">
           <string>User ID</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0" colspan="2">
+        <widget class="Line" name="line">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>10</height>
+          </size>
+         </property>
+         <property name="lineWidth">
+          <number>1</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
