--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,52 +33,6 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="2" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QLabel" name="label_2">
-        <property name="styleSheet">
-         <string notr="true">font: 75 120pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>SIMS</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="6" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="pushButton">
-        <property name="minimumSize">
-         <size>
-          <width>300</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>300</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">padding: 10px
-</string>
-        </property>
-        <property name="text">
-         <string>Login With Fingerprint</string>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="maximumSize">
@@ -98,7 +52,50 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
+      <item row="5" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_4">
+        <property name="styleSheet">
+         <string notr="true">font: 75 22pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Tap Anywhere to Continue</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_3">
+        <property name="styleSheet">
+         <string notr="true">font: 75 18pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>SMART INVENTORY MANAGEMENT SYSTEM</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">font: 75 140pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>SIMS</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="6" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -123,57 +120,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item row="7" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="pinButton">
-        <property name="minimumSize">
-         <size>
-          <width>300</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>300</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Login With PIN</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QLineEdit" name="pinBox">
-        <property name="minimumSize">
-         <size>
-          <width>300</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>400</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="maxLength">
-         <number>6</number>
-        </property>
-        <property name="echoMode">
-         <enum>QLineEdit::Password</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QLabel" name="label_3">
-        <property name="styleSheet">
-         <string notr="true">font: 75 14pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>SMART INVENTORY MANAGEMENT SYSTEM</string>
-        </property>
-       </widget>
       </item>
      </layout>
     </item>
